# ItemStudio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: itemstudio.cpp  itemstudio.h  main.cpp
src/algorithms/: states.hpp
src/graphics/gui/: gui.cpp  gui.h
src/graphics/gui/elements/: button.hpp  checkbox.hpp  element.hpp  line.hpp  radiobutton.hpp  text.hpp
src/io/: camera.cpp  camera.h  keyboard.cpp  keyboard.h
src/window/: window.cpp  window.h  windowmanager.cpp  windowmanager.h
